--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "^3.0.1",
     "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
